# wagtail-xliff-translation

./: .gitignore  404.html  CHANGELOG.txt  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  README.md  index.html  manage.py  mkdocs.yml  pytest.ini  setup.cfg  sitemap.xml
.github/workflows/: test.yml
development/: index.html
docs/: development.md  index.md
search/: search_index.json
src/wagtail-xliff-translation/xliff/: __init__.py  apps.py  constants.py  forms.py  utils.py  views.py  wagtail_hooks.py  xliff_generator.py
src/wagtail-xliff-translation/xliff/helpers/: Translation.py  page.py
src/wagtail-xliff-translation/xliff/parsers/: html_xliff.py  xliff_wagtail.py
src/wagtail-xliff-translation/xliff/serializers/: __init__.py  wagtail_xliff.py  xliff_wagtail.py
src/wagtail-xliff-translation/xliff/templates/xliff/admin/: download.html  import.html
src/wagtail-xliff-translation/xliff/test/: apps.py  blocks.py  models.py
src/wagtail-xliff-translation/xliff/test/factories/: page_factories.py
src/wagtail-xliff-translation/xliff/test/migrations/: 0001_initial.py
src/wagtail-xliff-translation/xliff/tests/: conftest.py  fixtures.py  utils.py
src/wagtail-xliff-translation/xliff/tests/functional/: test_integration.py  test_views.py  test_wagtail_xliff.py  test_xliff_wagtail.py
src/wagtail-xliff-translation/xliff/tests/unit/: test_apps.py  test_helpers.py  test_views.py
src/wagtail_xliff_translation/xliff/: views.py  wagtail_hooks.py
test_app/: asgi.py  models.py  settings.py  wsgi.py
test_app/data/xliff/: richtextpage.xliff  streamfieldpage.xliff  zgpage.xliff
test_app/data/xliff_translated/: richtextpage.xliff  zgpage.xliff
test_app/factories/: streamfield_data.json
test_app/test_app/: asgi.py  models.py  settings.py  urls.py  utils.py  wsgi.py
test_app/test_app/data/xliff/: zgpage.xliff
test_app/test_app/data/xliff_translated/: richtextpage.xliff  streamfieldpage.xliff
test_app/test_app/factories/: page_factories.py
test_app/test_app/tests/: fixtures.py
test_app/test_app/tests/functional/: test_integration.py  test_views.py  test_wagtail_xliff.py  test_xliff_wagtail.py
test_app/test_app/tests/unit/: test_apps.py  test_helpers.py  test_views.py
wagtail_xliff_translation/: __init__.py  apps.py  forms.py  views.py  wagtail_hooks.py  xliff_generator.py
wagtail_xliff_translation/helpers/: Translation.py  __init__.py  page.py
wagtail_xliff_translation/parsers/: html_xliff.py  xliff_wagtail.py
wagtail_xliff_translation/serializers/: wagtail_xliff.py  xliff_wagtail.py
wagtail_xliff_translation/test_app/: asgi.py  models.py  settings.py  urls.py  wsgi.py
wagtail_xliff_translation/test_app/data/xliff/: richtextpage.xliff  streamfieldpage.xliff
wagtail_xliff_translation/test_app/factories/: __init__.py  page_factories.py
wagtail_xliff_translation/test_app/migrations/: 0001_initial.py  0002_auto_20210601_2124.py  0003_basepage.py
wagtail_xliff_translation/tests/: conftest.py  fixtures.py  utils.py
wagtail_xliff_translation/tests/functional/: test_integration.py  test_views.py  test_wagtail_hooks.py  test_wagtail_xliff.py  test_xliff_wagtail.py
wagtail_xliff_translation/tests/unit/: test_apps.py  test_helpers.py  test_html_xliff.py  test_views.py  test_wagtail_xliff.py
wagtail_xliff_translation/xliff/: __init__.py  views.py
wagtail_xliff_translation/xliff/helpers/: Translation.py
