[metadata]
name = wagtail_xliff_translation
version = 0.0.1
author = Lennard de Vries
author_email = lennard@fourdigits.nl
description = Export Wagtail content to XLIFF and back
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fourdigits/wagtail-xliff-translation
project_urls =
    Projects = https://github.com/fourdigits/wagtail-xliff-translation/projects
    Bug Tracker = https://github.com/fourdigits/wagtail-xliff-translation/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Wagtail
    Framework :: Wagtail :: 2

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.extras_require]
docs = mkdocs>=1.1,<1.2; mkdocs-material>=7.1,<7.2
test = pytest; factory_boy

[options.packages.find]
where = src
