[metadata]
name = wagtail_xliff_translation
version = 1.0.3
author = Lennard de Vries
author_email = lennard@fourdigits.nl
description = Export Wagtail content to XLIFF and back
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fourdigits/wagtail-xliff-translation
project_urls =
    Projects = https://github.com/fourdigits/wagtail-xliff-translation/projects
    Bug Tracker = https://github.com/fourdigits/wagtail-xliff-translation/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django 
    Framework :: Wagtail
    Framework :: Wagtail :: 2

[options]
zip_safe=False
include_package_data=True
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires = wagtail

[options.package_data]
wagtail_xliff_translation =
    templates/xliff/admin/*

[options.extras_require]
docs =
    mkdocs>=1.1,<1.2
    mkdocs-material>=7.1,<7.2
test =
    django_extensions
    factory_boy
    pytest
    pytest-black
    pytest-cov
    pytest-django
    pytest-mock
    pytest_factoryboy
    pytest-flake8
    pytest-isort
    pytest-mccabe
    pytest-mock
    wagtail-factories

[options.packages.find]
where = .

[tool:pytest]
DJANGO_SETTINGS_MODULE = wagtail_xliff_translation.test_app.settings
testpaths = .
python_files = test_*.py
norecursedirs = migrations
addopts =
    --isort
    --flake8
    --black
    --mccabe
    --cov=.
    --cov-report=term-missing
    --cov-report=xml
    --cov-report=html
markers =
    black
    mccabe
filterwarnings =
    ignore::django.utils.deprecation.RemovedInDjango40Warning
mccabe-complexity =
    xliff_wagtail.py 12
    *.py 9

[flake8]
# This part can be parsed by an editor / IDE and by pytest --flake8
# to determine which flake8 errors we ignore in our project.

# For use with SublimeText and the Flake8Lint plugin
# (https://github.com/dreadatour/Flake8Lint):
# Edit project -> "use_flake8_project_config": true

# For use with Visual Studio Code install the 'python' package.
# On apple press cmd+shift+p and search for 'Python: select linter' and select flake8.
# The Python flake8 linter will use this config file.

# This is just to override the Flake8 default line length.
# Real line length is controlled by Black.
max-line-length = 119

# List of docstring errors: http://www.pydocstyle.org/en/stable/error_codes.html
# Format: separated by commas, no spaces.
ignore = D100,D101,D102,D103,D200,D204,D205,D400,D401,W503
exclude = **/migrations/*.py env/* settings/*.py
max-complexity = 11

[isort]
; to be black compatible
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

; Project
default_section = THIRDPARTY
known_first_party = testapp
known_django = django
known_wagtail = wagtail
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,WAGTAIL,FIRSTPARTY,LOCALFOLDER
skip = migrations/*

[coverage:report]
show_missing = True

[coverage:run]
omit =
    env/*
    **/tests/**
    **/migrations/**
    manage.py
    settings/**
    wsgi.py
    urls.py
    setup.py
